--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^6.7.1",
+    "next": "^13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "web3modal": "^1.9.12"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "hardhat": "^2.17.4"
   }
 }
